[build-system]
requires = [
    "setuptools>=58.3",
    "setuptools-scm[toml]>=7.0",
    "wheel>=0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "restorable"
readme = "README.md"
description = "Restorable objects, configuration, and modules"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.7,<4.0"
dynamic = [
    "version",
]

[project.urls]
Repository = "https://github.com/whardier/restorable-python"

[project.optional-dependencies]
dev = [
    "black~=22.10",
    "build~=0.9",
    "flake8-awesome~=1.3",
    "flake8-pyproject~=1.2",
    "pre-commit~=2.20",
    "mccabe~=0.7",
    "mypy~=0.991",
    "pytest~=7.2",
    "tox~=3.27",
    "twine~=4.0",
]

[tool.setuptools.packages.find]
where = [
    "src"
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.black]
line_length = 120

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    ".eggs",
    "build",
    "dist",
    "tests",
    "src/_es",
]
doctests = true
per-file-ignores = [
    "tests/*:S101",
    "src/*:E800,E501",
    "src/**/__init__.py:F401",
]
max-complexity = 10

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
